--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
               }
               return acc;
             }, []);
-            fetch("https://acabackend.onrender.com/collection/orderinfo", {
+            fetch("https://myvue-project1.onrender.com/collection/orderinfo", {
               method: "POST",
               headers: { "Content-Type": "application/json" },
               body: JSON.stringify({
@@ -251,7 +251,7 @@
             this.cart.forEach((product) => {
               const updatedSpaces = product.Spaces - product.quantity;
               fetch(
-                `https://acabackend.onrender.com/collection/products/${product._id}`,
+                `https://myvue-project1.onrender.com/collection/products/${product._id}`,
                 {
                   method: "PUT",
                   headers: { "Content-Type": "application/json" },
@@ -277,7 +277,7 @@
 
           async fetchProducts() {
             try {
-              const url = "https://acabackend.onrender.com/collection/products";
+              const url = "https://myvue-project1.onrender.com/collection/products";
               const response = await fetch(url);
 
               if (!response.ok) {
